// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cover slot 1`] = `
<div class="buri-image-preview" name="buri-fade">
  <div class="buri-swipe buri-image-preview__swipe">
    <div class="buri-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="buri-image-preview__index">1 / 0</div>
  <div class="buri-image-preview__cover">Custom Cover Content</div>
</div>
`;

exports[`index slot 1`] = `
<div class="buri-image-preview" name="buri-fade">
  <div class="buri-swipe buri-image-preview__swipe">
    <div class="buri-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="buri-image-preview__index">Custom Index</div>
</div>
`;

exports[`lazy-load prop 1`] = `
<div class="buri-image-preview" name="buri-fade">
  <div class="buri-swipe buri-image-preview__swipe">
    <div class="buri-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);">
      <div class="buri-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image" style="transition-duration: .3s;"><img class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="buri-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image"><img class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="buri-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image"><img class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-image-preview__index">1 / 3</div>
</div>
`;

exports[`render image 1`] = `
<div class="buri-image-preview" name="buri-fade">
  <div class="buri-swipe buri-image-preview__swipe">
    <div class="buri-swipe__track" style="width: 0px; transition-duration: 500ms; transform: translateX(0px);">
      <div class="buri-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image" style="transition-duration: .3s;"><img src="https://img.yzcdn.cn/1.png" class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="buri-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image"><img src="https://img.yzcdn.cn/2.png" class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="buri-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image"><img src="https://img.yzcdn.cn/3.png" class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-image-preview__index">1 / 3</div>
</div>
`;

exports[`set show-index prop to false 1`] = `
<div class="buri-image-preview" name="buri-fade">
  <div class="buri-swipe buri-image-preview__swipe">
    <div class="buri-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
</div>
`;

exports[`zoom 1`] = `
<div class="buri-image-preview" name="buri-fade">
  <div class="buri-swipe buri-image-preview__swipe">
    <div class="buri-swipe__track" style="transition-duration: 500ms; width: 0px; transform: translateX(0px);">
      <div class="buri-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image" style="transition-duration: 0s; transform: scale3d(2, 2, 1) translate(0px, NaNpx);"><img src="https://img.yzcdn.cn/1.png" class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="buri-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image"><img src="https://img.yzcdn.cn/2.png" class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
      <div class="buri-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);">
        <div class="buri-image buri-image-preview__image"><img src="https://img.yzcdn.cn/3.png" class="buri-image__img" style="object-fit: contain;">
          <div class="buri-image__loading">
            <div class="buri-loading buri-loading--spinner"><span class="buri-loading__spinner buri-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-image-preview__index">1 / 3</div>
</div>
`;
